--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,15 @@
 	<groupId>com.example</groupId>
 	<artifactId>myproject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+        
+	<!-- common configuration such default java compiler level, plugin configuration, UTF-8 source encoding, dependency management etc-->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.1.RELEASE</version>
 	</parent>
 
+	<!-- This is a web application -->
 	<dependencies>
 	   <dependency>
 	      <groupId>org.springframework.boot</groupId>
